Cherry-pick 286701@main (d85604cdce9a). https://bugs.webkit.org/show_bug.cgi?id=283241

Non-unified build fixes, mid-November 2024 edition
    https://bugs.webkit.org/show_bug.cgi?id=283241

    Unreviewed non-unified build fixes.

    * Source/WTF/wtf/glib/GRefPtr.h: Avoid forward declarations for
      g_object_unref() and g_object_ref_sink() if they are already defined
      due to an earlier inclusion of glib-object.h.
    * Source/WTF/wtf/glib/Sandbox.cpp: Remove unneeded inclusion of glib.h.
    * Source/WebCore/Modules/mediastream/MediaStreamTrackProcessor.cpp: Add
      missing ImageBitmap.h inclusion.
    * Source/WebCore/page/scrolling/nicosia/ScrollingTreeOverflowScrollProxyNodeNicosia.cpp:
      Add missing ScrollingTree.h inclusion.
    * Source/WebCore/page/scrolling/nicosia/ScrollingTreePositionedNodeNicosia.cpp:
      Ditto.
    * Source/WebCore/platform/LowPowerModeNotifier.h: Mark forward declaration
      of GPowerProfileMonitor be extern "C".
    * Source/WebCore/style/values/StyleValueTypes.h: Add forward declaration
      for CSSToLengthConversionData.
    * Source/WebCore/style/values/color-adjust/StyleColorScheme.cpp: Add
      missing CSSToLengthConversionData.h inclusion.
    * Source/WebKit/NetworkProcess/soup/NetworkProcessMainSoup.cpp: Add
      missing NetworkSession.h inclusion.

    Canonical link: https://commits.webkit.org/286701@main

Canonical link: https://commits.webkit.org/282416.286@webkitglib/2.46